[project]
name = "multiparallel_logging"
version = "0.0.1"
authors = [
  { name="Ralf Kotulla", email="ralf.kotulla@gmail.com" },
]
description = "A flexible multi-processing safe logging tool"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rkotulla/multiparallel_logging"
"Bug Tracker" = "https://github.com/rkotulla/multiparallel_logging/issues"
