[project]
name = "multiparlog"
version = "1.0.0"
authors = [
  { name="Ralf Kotulla", email="ralf.kotulla@gmail.com" },
]
description = "A flexible multi-processing safe logging tool"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rkotulla/multiparallel_logging"
"Bug Tracker" = "https://github.com/rkotulla/multiparallel_logging/issues"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

